--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,7 +21,7 @@ form{
 	/*background-color: #af111c;*/
 	width: 60%;
 	margin: 20px auto 0 auto;
-	height: 1024px;
+	height: 1224px;
 	color: white;
 	font-size: 22px;
 	text-align: center;
@@ -30,7 +30,7 @@ form{
 	display:none;
 }
 .btn{
-  display: inline-block;
+  display: none;
   margin: 5px;
   padding: 15px 25px;
   font-size: 24px;
@@ -51,4 +51,7 @@ form{
   background-color: #3e8e41 ;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+#begin{
+	display: inline-block;
 }
